# Post-Silicon-Validation-Tools

./: .gitignore  BUILD_PLAN.md  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
cpp/bindings/: bindings.cpp
cpp/include/sep/: log_parser.hpp  reg_decoder.hpp
cpp/src/: log_parser.cpp  reg_decoder.cpp
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.jsx  api.js  styles.css
learn/: 01_cpp_vs_python_parser.py  02_schmoo_edge.py  README.md
sep/: __init__.py  _pyfallback.py  _types.py  cli.py  core.py  registers.py
sep/analysis/: __init__.py  analysis.py
sep/api/: __init__.py  app.py
sep/datagen/: __init__.py  generator.py
sep/db/: __init__.py  ingest.py  models.py
sep/reports/: __init__.py  report.py  template.html.j2
specs/: core_status.csv
tests/: test_core.py  test_pipeline.py
